Fix around colors for scrollbar

--- a/src/scss/grid.scss
+++ b/src/scss/grid.scss
@@ -49,10 +49,6 @@ $ac-grid-sizes: 'sm', 'md', 'lg', 'xl';
     display: list-item;
   }
 
-  .ac-display-run-in#{$suffix} {
-    display: run-in;
-  }
-
   .ac-display-table#{$suffix} {
     display: table;
   }
