--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -57,6 +57,8 @@
           display: none;
         }
       }
+
+      @include ac-scrollbars;
     }
 
     button,
@@ -83,6 +85,5 @@
     @include ac-layouts();
     @include ac-account();
     @include ac-pricing();
-    @include ac-scrollbars();
   }
 }
